--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "fs": "0.0.1-security",
     "init": "^0.1.2",
     "mongodb": "^3.0.3"
   },
