--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "init": "^0.1.2",
-    "mongodb": "^3.0.3"
+    "mongodb": "^3.0.3",
+    "mongoose": "^5.2.5"
   },
   "devDependencies": {},
   "scripts": {
