--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.2",
     "express-force-ssl": "^0.3.2",
     "fs": "0.0.1-security",
+    "generate-readme": "^0.3.1",
     "init": "^0.1.2",
     "mongodb": "^3.0.3",
     "mongoose": "^5.2.5"
